<resources>
    <string name="app_name">Manchester United FC</string>

    <!-- Common Strings-->
    <string name="tv_empty"> </string>

<!-- Home Activity-->
    <string name="tv_midfielder">MIDFIELDERS</string>
    <string name="tv_goalkeeper">GOALKEEPERS</string>
    <string name="tv_forward">FORWARDS</string>
    <string name="tv_defender">DEFENDERS</string>




    <!-- Profile Activity-->
    <string name="tv_position">POSITION: </string>
    <string name="tv_appearances">APPEARANCES </string>
    <string name="tv_age">AGE </string>
    <string name="tv_dob">DATE OF BIRTH: </string>
    <string name="tv_country">COUNTRY: </string>
    <string name="tv_joined">JOINED: </string>
    <string name="tv_number">NUMBER</string>
    <string name="btn_last_match">Last Match Performance</string>


    <!--Last Match Activity -->
    <string name="tv_general">GENERAL</string>
    <string name="tv_minutes">Minutes Played</string>
    <string name="tv_red_card">Red Cards</string>
    <string name="tv_yellow_card">Yellow Cards</string>
    <string name="tv_last_match">Last Match</string>
    <string name="tv_passing">PASSING</string>
    <string name="tv_successful_passes">Successful Passes</string>
    <string name="tv_unsuccessful_passes">Unsuccessful Passes</string>
    <string name="tv_unsuccessful_third">Unsuccessful Final Third Passes</string>
    <string name="tv_successful_third">Successful Final Third Passes</string>
    <string name="tv_defending">DEFENDING</string>
    <string name="tv_tackles">Tackles Won</string>
    <string name="tv_duels">Duels Won</string>
    <string name="tv_interceptions">Interceptions Won</string>
    <string name="btn_web">More Details</string>

    <!-- ToolBar Menu-->
    <string name="url">Webpage</string>
    <string name="match">Last Match</string>
    <string name="home">All Players</string>
    <string name="profile">Profile</string>


    <!--Error Messages-->
    <string name="url_error">Error Loading Url</string>
    <string name="player_xml_error">Error Retrieving Player Data</string>
    <string name="match_xml_error">Error Retrieving Match Data</string>


    <!--Design Specifications -->
    <string name="small_text_size">18sp</string>
    <string name="large_text_size">20sp</string>
    <string name="heading_text_size">25sp</string>

</resources>