<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LastMatchActivity">
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:textStyle="italic"
        android:text="@string/tv_empty"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:text="@string/tv_last_match"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"

        android:text="@string/tv_empty"
        android:textSize="20sp" />



    <View
        android:id="@+id/view3"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/tv_general"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgGeneralArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_up"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>

    <TableLayout
        android:id="@+id/tlGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgMinutes"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/tv_minutes"
                android:padding="5dp"
                android:src="@drawable/minutes"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_minutes"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/tv_red_card"
                android:padding="5dp"
                android:src="@drawable/red_card"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_red_card"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRedCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/tv_yellow_card"
                android:padding="5dp"
                android:src="@drawable/yellow_card"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_yellow_card"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvYellowCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/tv_defending"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgDefenceArrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_up"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:id="@+id/tlDefending"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_duels"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvDuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_tackles"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvTackles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_interceptions"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvInceptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/tv_empty"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_passing" />

                <ImageView
                    android:id="@+id/imgPassing"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_up"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>
            <com.github.mikephil.charting.charts.PieChart
                android:layout_height="400dp"
                android:layout_width="400dp"
                android:id="@+id/pcPassing"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>