<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgTeam"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:src="@drawable/manunited_logo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:textSize="25sp"
            android:text="@string/tv_empty"
            android:textColor="@color/white" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor=" @android:color/holo_red_dark"
            android:text="@string/tv_defender" />

        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcDefender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="2dp" />
        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor=" @android:color/holo_red_dark"
            android:text="@string/tv_midfielder" />
        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcMidfielder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="2dp" />
        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor=" @android:color/holo_red_dark"
            android:text="@string/tv_forward" />
        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcForward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="2dp" />


        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor=" @android:color/holo_red_dark"
            android:text="@string/tv_goalkeeper" />
        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcGoalKeeper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="2dp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>